# epimargin

./: pyproject.toml  requirements.txt
.ci/: Dockerfile.debian  Dockerfile.ubuntu  Makefile
.github/workflows/: linux.yml  python-app.yml  windows.yml
epimargin/: estimators.py  models.py  plots.py  policy.py  utils.py
epimargin/etl/: __init__.py  covid19india.py  csse.py  devdatalab.py  oxcgrt.py
tests/: test_sanity.py
