[tool.poetry]
name = "epimargin"
version = "0.5.3"
description = "Toolkit for estimating epidemiological metrics and evaluating public health and economic policies."
authors = ["COVID International Working Group"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.5"
pandas = "^1.1.5"
matplotlib = "^3.1.3"
pymc3 = "^3.9.3"
statsmodels = "0.12.2"
geopandas = "^0.9.0"
requests = "^2.26.0"
flat-table = "^1.1.1"
seaborn = "^0.11.1"
tikzplotlib = "^0.9.9"
semver = "2.12.0"
scikit-learn = "^0.24.2"
arviz = {version = "0.11.0", optional = true, extras = ["studies"]}

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.4"
pylint = "^2.9.5"
tqdm = "^4.61.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

